added DNN and RNN examples

--- a/C4/W2/ungraded_labs/C4_W2_Lab_1_features_and_labels.ipynb
+++ b/C4/W2/ungraded_labs/C4_W2_Lab_1_features_and_labels.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "mBw-_CJVEDxY"
    },
@@ -48,11 +48,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "asEdslR_05O_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 15:38:59.747780: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a tf dataset with 10 elements (i.e. numbers 0 to 9)\n",
     "dataset = tf.data.Dataset.range(10)\n",
@@ -84,11 +108,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "Lrv_ghSt1lgQ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_VariantDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>\n",
+      "<_VariantDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>\n",
+      "<_VariantDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>\n",
+      "<_VariantDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>\n",
+      "<_VariantDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>\n",
+      "<_VariantDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>\n",
+      "<_VariantDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>\n",
+      "<_VariantDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>\n",
+      "<_VariantDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>\n",
+      "<_VariantDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 15:39:59.386017: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a tf dataset with 10 elements (i.e. numbers 0 to 9)\n",
     "dataset = tf.data.Dataset.range(10)\n",
@@ -112,11 +160,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "vpL6Bsm7W0xx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[2, 3, 4, 5, 6]\n",
+      "[3, 4, 5, 6, 7]\n",
+      "[4, 5, 6, 7, 8]\n",
+      "[5, 6, 7, 8, 9]\n",
+      "[6, 7, 8, 9]\n",
+      "[7, 8, 9]\n",
+      "[8, 9]\n",
+      "[9]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 15:40:19.425626: W tensorflow/core/framework/dataset.cc:959] Input of Window will not be optimized because the dataset does not implement the AsGraphDefInternal() method needed to apply optimizations.\n",
+      "2025-06-25 15:40:19.429666: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:40:19.433184: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:40:19.435696: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:40:19.437982: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:40:19.440163: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:40:19.442642: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:40:19.445167: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:40:19.447145: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:40:19.448803: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:40:19.450235: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:40:19.450697: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the result\n",
     "for window_dataset in dataset:\n",
@@ -134,11 +217,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "QLEq6MG-2DN2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[2, 3, 4, 5, 6]\n",
+      "[3, 4, 5, 6, 7]\n",
+      "[4, 5, 6, 7, 8]\n",
+      "[5, 6, 7, 8, 9]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 15:42:53.962302: W tensorflow/core/framework/dataset.cc:959] Input of Window will not be optimized because the dataset does not implement the AsGraphDefInternal() method needed to apply optimizations.\n",
+      "2025-06-25 15:42:53.963939: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:42:53.966175: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:42:53.967682: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:42:53.968828: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:42:53.970103: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:42:53.971453: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
+      "2025-06-25 15:42:53.971824: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a tf dataset with 10 elements (i.e. numbers 0 to 9)\n",
     "dataset = tf.data.Dataset.range(10)\n",
@@ -166,11 +276,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "PJ9CAHlJ2ODe"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n",
+      "[1 2 3 4 5]\n",
+      "[2 3 4 5 6]\n",
+      "[3 4 5 6 7]\n",
+      "[4 5 6 7 8]\n",
+      "[5 6 7 8 9]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 15:43:13.701040: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a tf dataset with 10 elements (i.e. numbers 0 to 9)\n",
     "dataset = tf.data.Dataset.range(10)\n",
@@ -199,11 +329,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "DryEZ2Mz2nNV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  [0 1 2 3]\n",
+      "y =  4\n",
+      "\n",
+      "x =  [1 2 3 4]\n",
+      "y =  5\n",
+      "\n",
+      "x =  [2 3 4 5]\n",
+      "y =  6\n",
+      "\n",
+      "x =  [3 4 5 6]\n",
+      "y =  7\n",
+      "\n",
+      "x =  [4 5 6 7]\n",
+      "y =  8\n",
+      "\n",
+      "x =  [5 6 7 8]\n",
+      "y =  9\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 15:43:22.673729: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a tf dataset with 10 elements (i.e. numbers 0 to 9)\n",
     "dataset = tf.data.Dataset.range(10)\n",
@@ -239,11 +401,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "1tl-0BOKkEtk"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  [2 3 4 5]\n",
+      "y =  6\n",
+      "\n",
+      "x =  [4 5 6 7]\n",
+      "y =  8\n",
+      "\n",
+      "x =  [0 1 2 3]\n",
+      "y =  4\n",
+      "\n",
+      "x =  [5 6 7 8]\n",
+      "y =  9\n",
+      "\n",
+      "x =  [1 2 3 4]\n",
+      "y =  5\n",
+      "\n",
+      "x =  [3 4 5 6]\n",
+      "y =  7\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 15:50:59.087661: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a tf dataset with 10 elements (i.e. numbers 0 to 9)\n",
     "dataset = tf.data.Dataset.range(10)\n",
@@ -282,11 +476,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "Wa0PNwxMGapy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  [[5 6 7 8]\n",
+      " [3 4 5 6]]\n",
+      "y =  [9 7]\n",
+      "\n",
+      "x =  [[4 5 6 7]\n",
+      " [0 1 2 3]]\n",
+      "y =  [8 4]\n",
+      "\n",
+      "x =  [[2 3 4 5]\n",
+      " [1 2 3 4]]\n",
+      "y =  [6 5]\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-25 15:51:30.072025: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a tf dataset with 10 elements (i.e. numbers 0 to 9)\n",
     "dataset = tf.data.Dataset.range(10)\n",
@@ -350,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
